ah-97 | add placeholder for article feedback bar to prevent jumping when component are injected on load

--- a/media/css/_sass/_structure.scss
+++ b/media/css/_sass/_structure.scss
@@ -1,6 +1,7 @@
 //.presidium-container {
 //  @extend .container-fluid;
 //  margin-left: 0px;
+
 #presidium-container {
   @media (min-width: $grid-float-breakpoint) {
     margin-left: 260px;
@@ -100,6 +101,15 @@
         }
       }
       .article {
+        .placeholder {
+          width: 100%;
+          display: flex;
+
+          > .article-bar-placeholder {
+            height: 52px;
+            width: 100%;
+          }
+        }
         .article-edit-menu {
           display: flex;
           flex-direction: column;
